--- a/flinkx-rdb/flinkx-rdb-writer/pom.xml
+++ b/flinkx-rdb/flinkx-rdb-writer/pom.xml
@@ -18,6 +18,12 @@
             <version>1.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>3.11.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
